<resources>
    <string name="app_name">Todoer</string>

    <string name="placeholder">Placeholder</string>

    <string name="title_todo">To-do List</string>
    <string name="title_completed">Completed Tasks</string>

    <string name="action_show_task_list_label">Show Task List</string>
    <string name="action_show_completed_label">Show Completed</string>
    <string name="action_new_task_label">New Task</string>
    <string name="action_sort_label">Sort</string>

    <string name="action_sort_by_creation">By create date</string>
    <string name="action_sort_by_due">By due date</string>
    
    <string name="button_save_task_label">Save</string>
    <string name="button_cancel_label">Cancel</string>
    <string name="button_delete_task_label">Delete</string>
    <string name="button_complete_task_label">Complete</string>
    <string name="button_un_complete_task_label">Un-complete</string>

    <string name="title_hint">Title</string>
    <string name="detail_hint">Details</string>

    <string name="status_created_label">Created on:</string>
    <string name="status_due_label">Due on:</string>
    <string name="status_completed_label">Completed on:</string>
    <string name="status_time_label">Time:</string>
    <string name="status_incomplete">Not yet completed</string>

    <string name="toast_created_task">New task created</string>
    <string name="toast_empty_fields">Fields cannot be empty</string>
</resources>
