<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_new_task"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/action_new_task_label"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/action_sort_label"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_sort_by_creation"
                android:title="@string/action_sort_by_creation"
                app:showAsAction="ifRoom"/>

            <item
                android:id="@+id/action_sort_by_due"
                android:title="@string/action_sort_by_due"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>
</menu>